--- a/notebook/whisper-webui.ipynb
+++ b/notebook/whisper-webui.ipynb
@@ -38,7 +38,8 @@
         "#@markdown This cell will install dependencies for Whisper-WebUI!\n",
         "!git clone https://github.com/jhj0517/Whisper-WebUI.git\n",
         "%cd Whisper-WebUI\n",
-        "!pip install -r requirements.txt"
+        "!pip install -r requirements.txt",
+        "!pip install tensorRT"
       ]
     },
     {
